# brew

./: .dir-locals.el  .gitignore  1885KirkstallPA.py  Armadillo.py  AscensioDomini.py  BarclayPerkinsXX1935.py  BarleyWine.py  BestBitter.py  Bitter.py  BlackXmas50.py  BrewedOnThe4thOfJuly.py  BrutIPA.py  DogDayIPA.py  DogDayIPA50.py  FolkAPA.py  GodareJul.py  GodareJul50.py  Helles.py  Kolsch.py  Kulmbacher.py  LondonBridge.py  LovibondXXX.py  Maibock.py  Marzen.py  Pilsner.py  PilsnerI.py  PilsnerII.py  README.md  Rotbier.py  Seizoen.py  StarkPorter.py  Vollbier.py  Warwicks.py  WhitbreadX.py  WhitbreadX2.py  WhitbreadXX1944.py  WhitbreadXl.py  WhitbreadXl2.py  WhitbreadXl3.py  shoppinglist.py  (+1 more)
brew/: __init__.py  common.py  fermentables.py  hops.py  instruction_template.html  profiles.py  pyproject.toml  recipe.py  shbf.py  template.html  templates.py  yeast.py
scripts/: htm2html.py  index.cgi  port.py
