[project]
name = "brew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
lint.select = [
    "ALL", # include all the rules, including new ones
]
lint.ignore = [
    "COM812",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D212",
    "FBT001",
    "FBT002",
    "PLR0912",
    "PLR0913",
    "Q000",
    "Q001",
    "T201",
    "TC001",
    "TC003",
    "TRY003",
]